<resources>
    <string name="app_name">EventsApp</string>
    <string name="menu_ui_mode">Dark Mode</string>
    <string name="ruppee_symbol">\u20B9 %d/-</string>
    <string name="featured">Featured</string>
    <string name="comedy">Comedy</string>
    <string name="music">Music</string>
    <string name="kids">Kids</string>
    <string name="online_course">Online Course</string>
    <string name="theme_pref_key">ThemePref</string>
</resources>
