<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/appBarlayout"
            layout="@layout/appbar_layout" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nested_sv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="true"
                android:measureAllChildren="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewpager_banner"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/viewpager_height" />

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tablayout_banner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:tabBackground="@drawable/tab_selector"
                        android:animateLayoutChanges="true"
                        app:tabGravity="center"
                        app:tabIndicatorHeight="0dp"
                        app:tabMaxWidth="10dp" />

                    <TextView
                        style="@style/TextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/featured" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_featured"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/recycler_featured_height"
                        android:layout_gravity="center_horizontal"
                        android:paddingStart="@dimen/recycler_16dp" />

                    <TextView
                        style="@style/TextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comedy" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_comedy"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/recycler_normal_height"
                        android:layout_gravity="center"
                        android:paddingStart="@dimen/recycler_16dp" />

                    <TextView
                        style="@style/TextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/music" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_music"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/recycler_normal_height"
                        android:paddingStart="@dimen/recycler_16dp" />

                    <TextView
                        style="@style/TextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kids" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_kids"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/recycler_normal_height"
                        android:paddingStart="@dimen/recycler_16dp" />

                    <TextView
                        style="@style/TextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/online_course" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_online_course"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/recycler_normal_height"
                        android:layout_marginBottom="16dp"
                        android:paddingStart="@dimen/recycler_16dp" />
                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>